# ProgrammingLanguageInterpreter

./: CMakeLists.txt  Chain.h  Expr.h  Object.h  expr.h  function.cpp  function.h  functionheader.cpp  functionheader.h  language.cpp  language.h  main.cpp  object.h  type.h
Function/: CMakeLists.txt  Function.cpp  Function.h
Grammar/: CMakeLists.txt  Language.h
Interpreter/: .Interpreter.h.swp  CMakeLists.txt  Context.h  Interpreter.cpp  Interpreter.h
Operation/: Assignment.h  CMakeLists.txt  Ioperation.h  operator.h
Type/: CMakeLists.txt  decimal.h  type.h
